# lib/db/src/schema/tracks.ts
@@ -10,6 +10,7 @@ export const tracksTable = pgTable("tracks", {
   description: text("description").notNull(),
   imagePath: text("image_path"),
   audioPath: text("audio_path"),
+  soundcloudUrl: text("soundcloud_url"),
   hasListen: boolean("has_listen").notNull().default(false),
   published: boolean("published").notNull().default(true),
   sortOrder: integer("sort_order").notNull().default(0),
